Dockerizing my First Spring Boot Application!!

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>
+		<finalName>SpringJpaCrud</finalName>
+			</build>
 
 </project>
