--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,36 +1,50 @@
-name:CICD
+name: CICD
 
 on:
   push:
-  	branches:[SpringBootCrud]
-  	
+    branches: [SpringBootCrud]
+
 jobs:
-  	build:
-  	 runs-on:[ubuntu-latest]
-  	 steps:
-	 -name:Checkout Source
-	  uses: actions/checkout@v4
-	 -name:Setup Java
-	  uses: actions/setup-java@v4
-	  with:
-	    distribution: 'temurin' # See 'Supported distributions' for available options
-	    java-version: '17'
-	  -name:Setup Java
-	   run: mvn clean install -DskipTests
-	  -name: Login to Docker Hub
-	   run: docker -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
-	  -name: Build Docker Image
-	   run: docker build -t MyCodeBase/SpringBootCrud .
-	   -name: Push image to Docker hub
-	    run: docker push MyCodeBase/SpringBootCrud:latest
-  	
-  	Deploy:
-  	   needs:build
-  	   runs-on:[ip-172-31-12-212]
-  	   steps:
-  	    -name:Pull Image from Docker Hub
-  	     run: docker pull MyCodeBase/SpringBootCrud:latest
-  	    -name:Delete old container
-  	     run: docker rm -f pull MyCodeBase/SpringBootCrud:latest
-  	    -name:RUn Docker Container
-  	     run: docker run -d -p 8080:8080 --name SpringBootCrud-container MyCodeBase/SpringBootCrud
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Source
+        uses: actions/checkout@v4
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Build with Maven
+        run: mvn clean install -DskipTests
+
+      - name: Login to Docker Hub
+        run: echo "${{secrets.DOCKER_PASSWORD}}" | docker login -u "${{secrets.DOCKER_USERNAME}}" --password-stdin
+
+      - name: Build Docker Image
+        run: docker build -t mycodebase/springbootcrud .
+
+      - name: Push image to Docker Hub
+        run: docker push mycodebase/springbootcrud:latest
+
+  deploy:
+    needs: build
+    runs-on: self-hosted
+    steps:
+      - name: Pull Image from Docker Hub
+        run: docker pull mycodebase/springbootcrud:latest
+
+      - name: Delete old container
+        run: docker rm -f springbootcrud-container || true
+
+      - name: Run Docker Container
+        run: docker run -d -p 8080:8080 --name springbootcrud-container mycodebase/springbootcrud:latest
+This YAML file defines a CI/CD pipeline that builds a Java project with Maven, creates a Docker image, and deploys it. The build job runs on ubuntu-latest, while the deploy job runs on a self-hosted runner.
+
+Using 1 Reference
+ Can you explain how to set up secrets for Docker Hub in GitHub Actions?
+
+
+No search results.
