--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -20,11 +20,25 @@ jobs:
       - name: Build with Maven
         run: mvn clean install -DskipTests
 
+      - name: Run Tests
+        run: mvn test
+
       - name: Login to Docker Hub
         run: echo "${{secrets.DOCKER_PASSWORD}}" | docker login -u "${{secrets.DOCKER_USERNAME}}" --password-stdin
 
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build Docker Image
-        run: docker build -t mycodebase/springbootcrud .
+        run: docker build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache --tag mycodebase/springbootcrud .
 
       - name: Push image to Docker Hub
         run: docker push mycodebase/springbootcrud:latest
@@ -41,10 +55,3 @@ jobs:
 
       - name: Run Docker Container
         run: docker run -d -p 8080:8080 --name springbootcrud-container mycodebase/springbootcrud:latest
-This YAML file defines a CI/CD pipeline that builds a Java project with Maven, creates a Docker image, and deploys it. The build job runs on ubuntu-latest, while the deploy job runs on a self-hosted runner.
-
-Using 1 Reference
- Can you explain how to set up secrets for Docker Hub in GitHub Actions?
-
-
-No search results.
