--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,4 +1,5 @@
-name: CICD
+
+name: Deploy to EC2
 
 on:
   push:
@@ -26,32 +27,23 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{secrets.DOCKER_PASSWORD}}" | docker login -u "${{secrets.DOCKER_USERNAME}}" --password-stdin
 
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Build Docker Image
-        run: docker build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache --tag mycodebase/springbootcrud .
+        run: docker build -t mycodebase/springbootcrud .
 
       - name: Push image to Docker Hub
         run: docker push mycodebase/springbootcrud:latest
 
   deploy:
     needs: build
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
-      - name: Pull Image from Docker Hub
-        run: docker pull mycodebase/springbootcrud:latest
-
-      - name: Delete old container
-        run: docker rm -f springbootcrud-container || true
-
-      - name: Run Docker Container
-        run: docker run -d -p 8080:8080 --name springbootcrud-container mycodebase/springbootcrud:latest
+      - name: SSH into EC2 and deploy
+        uses: appleboy/ssh-action@v0.1.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            docker pull mycodebase/springbootcrud:latest
+            docker rm -f springbootcrud-container || true
+            docker run -d -p 8080:8080 --name springbootcrud-container mycodebase/springbootcrud:latest
