Updated the pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<finalName>SpringJpaCrud</finalName>
+		<finalName>SpringBootCrud</finalName>
 			</build>
 
 </project>
