--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,13 @@ jobs:
         run: mvn test
 
       - name: Login to Docker Hub
-        run: echo docker login -u "${{secrets.DOCKER_USERNAME}}" -p "${{secrets.DOCKER_PASSWORD}}" docker.io
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: docker.io
+        
+        
 
       - name: Build Docker Image
         run: docker build -t mycodebase/springbootcrud .
