--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,13 +33,13 @@ jobs:
         
 
       - name: Build Docker Image
-        run: docker build -t mycodebase/springbootcrud .
+        run: docker build -t tekpie/springbootcrud .
         
       - name: Tag Docker Image
-        run: docker tag mycodebase/springbootcrud:mycodebase/springbootcrud
-        
+        run: docker image tag tekpie/springbootcrud:v1
+               
       - name: Push image to Docker Hub
-        run: docker push mycodebase/springbootcrud:mycodebase/springbootcrud
+        run: docker push tekpie/springbootcrud
 
 
   deploy:
