added the final name for the jar to be build

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 		<version>3.4.3</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>com.example.springbootk8s</groupId>
+	<artifactId>com.example.springbootk8s</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
@@ -170,6 +170,8 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>SpringBootApplicationOnKubernetes</finalName>
+
 	</build>
 
 </project>
