--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             docker pull tekpie/spring-boot-k8s:latest
-            eksctl create cluster --name my-cluster --version 1.18 --region us-west-2 --nodegroup-name my-nodes --node-type t3.medium --nodes 3
+            eksctl create cluster --name my-cluster --version 1.32 --region us-west-2 --nodegroup-name my-nodes --node-type t3.medium --nodes 3
             eksctl apply -f deployment.yaml
             eksctl apply -f service.yaml
-            eksctl get svc spring-boot-k8s
+            eksctl get svc
