--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,56 +1,33 @@
-
-name: Deploy to EC2
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [SpringBootApplicationOnKubernetes]
+    branches:
+      - main
 
 jobs:
-  build:
+  build_and_push:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Source
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Build with Maven
-        run: mvn clean install -DskipTests
+      - name: Authenticate to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Run Tests
-        run: mvn test
+      - name: Build and tag the image
+        run: |
+          docker build -t ${{ secrets.ECR_REPOSITORY }}:latest .
+          docker tag ${{ secrets.ECR_REPOSITORY }}:latest ${{ secrets.ECR_REPOSITORY }}:${GITHUB_SHA}
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-              
-
-      - name: Build Docker Image
-        run: docker build -t tekpie/spring-boot-k8s .
-        
-                    
-      - name: Push image to Docker Hub
-        run: docker push tekpie/spring-boot-k8s
-
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: SSH into EC2 and deploy
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.HOST_NAME }}
-          username: ${{ secrets.USER_NAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            docker pull tekpie/spring-boot-k8s:latest
-            eksctl create cluster --name my-cluster --version 1.32 --region us-west-2 --nodegroup-name my-nodes --node-type t3.medium --nodes 3
-            eksctl apply -f deployment.yaml
-            eksctl apply -f service.yaml
+      - name: Push the image to ECR
+        run: |
+          docker push ${{ secrets.ECR_REPOSITORY }}:latest
+          docker push ${{ secrets.ECR_REPOSITORY }}:${GITHUB_SHA}
